--- a/CaanLibraryTests/CaanLibraryTests.csproj
+++ b/CaanLibraryTests/CaanLibraryTests.csproj
@@ -15,4 +15,8 @@
     <PackageReference Include="coverlet.collector" Version="3.1.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CaanLibrary\CaanLibrary.csproj" />
+  </ItemGroup>
+
 </Project>
